--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 </div><!--end wrapper-->
 
 <!--COPYRIGHT-->
-<div id="copyright">&copy; 2012 - Designed and developed by THE MOLITOR. More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></div>
+<div id="copyright">©2017 Shanshu | 沪ICP备17046132号-1</div>
 
 <!--SCRIPTS-->
 <script src="js/jquery.js"></script>
