--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<link rel="shortcut icon" href=" ./images/favicon.ico" />
+	<link rel="shortcut icon" href=" ./images/favicon.ico" type="image/x-icon"/>
 	<title>个人主页</title>
 <meta name="viewport" content="initial-scale=1.0,width=device-width" />
 <link rel="stylesheet" href="css/style.css" type="text/css" media="screen" />
