--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <!--BIO-->
 <div id="bio">
-	<h2>网站开发</h2>
+	<h2>网站开发、游戏开发、运维</h2>
 	
 	<!--SOCIAL LINKS-->
 	<div id="socialIcons">
@@ -46,22 +46,7 @@
 		4、熟悉主流浏览器的兼容性测试，能快速解决浏览器的兼容性问题，对数据结构和java有一定了解。<br/>
 		5、逻辑能力强，具备良好的中英文读写能力，代码编写规范，对新知识充满学习热情。<br/>
 		6、熟练git操作，能独立完成基本的Linux操作。
-		<a title="Selected Work" data-rel="prettyPhoto[pp_gal]" href="images/portfolio/noc.jpg">WordPress themes</a>
-		
-		<!--////////////////////////////////////////////////////////////////////////////////////////-->
-		<!--IMAGES BELOW ARE HIDDEN AND WILL ONLY APPEAR IN THE GALLERY LINKED TO IN ABOVE PARAGRAPH -->
-		<!--////////////////////////////////////////////////////////////////////////////////////////-->
-		<a title="Selected Work" class="selectedWork" data-rel="prettyPhoto[pp_gal]" href="images/portfolio/producer.jpg"></a>
-		<a title="Selected Work" class="selectedWork" data-rel="prettyPhoto[pp_gal]" href="images/portfolio/photopharm.jpg"></a>
-		<a title="Selected Work" class="selectedWork" data-rel="prettyPhoto[pp_gal]" href="images/portfolio/brick.jpg"></a>
-		<a title="Selected Work" class="selectedWork" data-rel="prettyPhoto[pp_gal]" href="images/portfolio/nav.jpg"></a>
-		<a title="Selected Work" class="selectedWork" data-rel="prettyPhoto[pp_gal]" href="images/portfolio/novelist.jpg"></a>
-		<a title="Selected Work" class="selectedWork" data-rel="prettyPhoto[pp_gal]" href="images/portfolio/dailypress.jpg"></a>
-		<a title="Selected Work" class="selectedWork" data-rel="prettyPhoto[pp_gal]" href="images/portfolio/eventure.jpg"></a>
-		<a title="Selected Work" class="selectedWork" data-rel="prettyPhoto[pp_gal]" href="images/portfolio/politico.jpg"></a>
-		<a title="Selected Work" class="selectedWork" data-rel="prettyPhoto[pp_gal]" href="images/portfolio/zoom.jpg"></a>
-		<a title="Selected Work" class="selectedWork" data-rel="prettyPhoto[pp_gal]" href="images/portfolio/chameleon.jpg"></a>
-		<a title="Selected Work" class="selectedWork" data-rel="prettyPhoto[pp_gal]" href="images/portfolio/maitred.jpg"></a>
+
 	</p>
 	
 </div><!--end bio-->
@@ -101,7 +86,12 @@
 			<h4>上海圆率信息科技公司，上海</h4>
 			<h5>2017/7 - 至今</h5>
 		</div>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut justo nibh, mattis sit amet consequat a, varius vitae metus. Proin pharetra sodales pellentesque.</p>
+		<p>1.与设计师、产品工程师紧密工作在一起,实现产品前端ui和交互方面的开发需求，确保不同平台、设备上具有优秀的用户体验；
+			2.配合后端工程师增加页面的JS交互效果以及CSS排版；
+			3.根据不同的PC和手机浏览器编写高效的脚本代码；
+			4、持续的优化前端体验和页面相应速度，并保证兼容性和执行效率；
+			5.与团队成员分享经验和新技术，帮助团队成长。
+		</p>
 	</li>
 	<li>
 		<div class="details">
@@ -110,7 +100,7 @@
 			<h5>2016/5 - 2017/6</h5>
 		</div>
 		<p>主要工作内容有以下：
-			1、根据UI设计图进行切图完成移动端及pc端页面;
+			1、根据UI设计图进行切图完成移动端及pc端页面；
 			2、对前端页面优化以及动态页面的设计，负责echarts图表绘制；完成页面交互；
 			4、与后端开发人员紧密配合，完成产品的整体开发。</p>
 	</li>
@@ -130,14 +120,14 @@
 		<p>主修：信息论与数理统计、数据结构、c语言程序设计、面向对象程序设计、数据库系统原理、概率论与数理统计、模糊数学、高等代数、数学分析等
 			毕业设计：大学生数学建模能力评价研究</p>
 	</li>
-	<li>
-		<div class="details">
-			<h3>如皋市第一中学</h3>
-			<h4>理科，高中</h4>
-			<h5>2009/9 - 2012/6</h5>
-		</div>
-		<p></p>
-	</li>
+	<!--<li>-->
+		<!--<div class="details">-->
+			<!--<h3>如皋市第一中学</h3>-->
+			<!--<h4>理科，高中</h4>-->
+			<!--<h5>2009/9 - 2012/6</h5>-->
+		<!--</div>-->
+		<!--<p></p>-->
+	<!--</li>-->
 </ul><!--end schooling-->
 
 <div class="clear"></div>
@@ -147,12 +137,8 @@
 
 <!--HONORS / AWARDS-->
 <ul id="honorsAwards">
-	<li>Academy Award for Best Sound Design in a Bathroom</li>
-	<li>Emmy Award for Most Used Extra in a Drama</li>
-	<li>Grammy Award for Best Use of a Goat in a Soundtrack</li>
-	<li>S.A.G. Award for Touching the Ground</li>
-	<li>Presented with the Honor of Throwing Pies at Donald Trump</li>
-	<li>Featured in Dog & Country Monthly (issue 298, pg. 20)</li>
+	<li>多次获得学校奖学金</li>
+	<li>获得计算机二级证书</li>
 </ul><!--end honorsAwards-->
 
 <div class="clear"></div>
@@ -162,28 +148,47 @@
 
 <!--AS SEEN ON-->
 <ul id="seenOn">
-	<li class="bwWrapper"><img src="images/logos/abduzeedo.jpg" alt="Abduzeedo" /></li> 
-	<li class="bwWrapper"><img src="images/logos/logo.png" alt="Awwwards" /></li> 
-	<li class="bwWrapper"><img src="images/logos/creattica.png" alt="Creattica" /></li> 
-	<li class="bwWrapper"><img src="images/logos/css_mania.png" alt="CSS Mania" /></li> 
-	<li class="bwWrapper"><img src="images/logos/designers_couch.png" alt="Designers Couch" /></li> 
-	<li class="bwWrapper"><img src="images/logos/dribbble.png" alt="Dribbble" /></li> 
-	<li class="bwWrapper"><img src="images/logos/design_shack.png" alt="Design Shack" /></li> 
-	<li class="bwWrapper"><img src="images/logos/envato_notes.png" alt="Envato Notes" /></li> 
-	<li class="bwWrapper"><img src="images/logos/qnt_gallery.png" alt="qnt gallery" /></li> 
-	<li class="bwWrapper"><img src="images/logos/specky_boy.png" alt="specky boy" /></li> 
-	<li class="bwWrapper"><img src="images/logos/themeforest.png" alt="ThemeForest" /></li> 
-	<li class="bwWrapper"><img src="images/logos/unmatchedstyle.png" alt="unmatchedstyle" /></li> 
-	<li class="bwWrapper"><img src="images/logos/webdepot.jpg" alt="Web Designer Depot" /></li> 
-	<li class="bwWrapper"><img src="images/logos/webmag.jpg" alt="Web Designer mag" /></li> 
-	<li class="bwWrapper"><img src="images/logos/wptv-logo.png" alt="WordPress TV" /></li>
+	<li class="bwWrapper"><img src="images/logos/huton.png" alt="huton" /><a href="https://dajiahutong.com/" class="full-a"></a></li>
+	<li class="bwWrapper"><img src="images/logos/tauve.png" alt="tauve" /><a href="https://tauve.com/" class="full-a"></a></li>
+	<li class="bwWrapper"><img src="images/logos/lanya.png" alt="lanya" /></li>
+	<li class="bwWrapper"><img src="images/logos/ladygood.png" alt="ladygood" /></li>
+	<!--<li class="bwWrapper"><img src="images/logos/designers_couch.png" alt="Designers Couch" /></li> -->
+	<!--<li class="bwWrapper"><img src="images/logos/dribbble.png" alt="Dribbble" /></li> -->
+	<!--<li class="bwWrapper"><img src="images/logos/design_shack.png" alt="Design Shack" /></li> -->
+	<!--<li class="bwWrapper"><img src="images/logos/envato_notes.png" alt="Envato Notes" /></li> -->
+	<!--<li class="bwWrapper"><img src="images/logos/qnt_gallery.png" alt="qnt gallery" /></li> -->
+	<!--<li class="bwWrapper"><img src="images/logos/specky_boy.png" alt="specky boy" /></li> -->
+	<!--<li class="bwWrapper"><img src="images/logos/themeforest.png" alt="ThemeForest" /></li> -->
+	<!--<li class="bwWrapper"><img src="images/logos/unmatchedstyle.png" alt="unmatchedstyle" /></li> -->
+	<!--<li class="bwWrapper"><img src="images/logos/webdepot.jpg" alt="Web Designer Depot" /></li> -->
+	<!--<li class="bwWrapper"><img src="images/logos/webmag.jpg" alt="Web Designer mag" /></li> -->
+	<!--<li class="bwWrapper"><img src="images/logos/wptv-logo.png" alt="WordPress TV" /></li>-->
+
 </ul><!--end seenOn-->
+<div>
+	<!--<a title="Selected Work" data-rel="prettyPhoto[pp_gal]" href="images/portfolio/noc.jpg">效果展示</a>-->
+
+	<!--////////////////////////////////////////////////////////////////////////////////////////-->
+	<!--IMAGES BELOW ARE HIDDEN AND WILL ONLY APPEAR IN THE GALLERY LINKED TO IN ABOVE PARAGRAPH -->
+	<!--////////////////////////////////////////////////////////////////////////////////////////-->
+	<a title="Selected Work" class="selectedWork" data-rel="prettyPhoto[pp_gal]" href="images/portfolio/producer.jpg"></a>
+	<a title="Selected Work" class="selectedWork" data-rel="prettyPhoto[pp_gal]" href="images/portfolio/photopharm.jpg"></a>
+	<a title="Selected Work" class="selectedWork" data-rel="prettyPhoto[pp_gal]" href="images/portfolio/brick.jpg"></a>
+	<a title="Selected Work" class="selectedWork" data-rel="prettyPhoto[pp_gal]" href="images/portfolio/nav.jpg"></a>
+	<a title="Selected Work" class="selectedWork" data-rel="prettyPhoto[pp_gal]" href="images/portfolio/novelist.jpg"></a>
+	<a title="Selected Work" class="selectedWork" data-rel="prettyPhoto[pp_gal]" href="images/portfolio/dailypress.jpg"></a>
+	<a title="Selected Work" class="selectedWork" data-rel="prettyPhoto[pp_gal]" href="images/portfolio/eventure.jpg"></a>
+	<a title="Selected Work" class="selectedWork" data-rel="prettyPhoto[pp_gal]" href="images/portfolio/politico.jpg"></a>
+	<a title="Selected Work" class="selectedWork" data-rel="prettyPhoto[pp_gal]" href="images/portfolio/zoom.jpg"></a>
+	<a title="Selected Work" class="selectedWork" data-rel="prettyPhoto[pp_gal]" href="images/portfolio/chameleon.jpg"></a>
+	<a title="Selected Work" class="selectedWork" data-rel="prettyPhoto[pp_gal]" href="images/portfolio/maitred.jpg"></a>
+</div>
 
 <div class="clear"></div>
 
 
 <!--CONTACT TITLE-->
-<h2 id="contact" class="sectionHead">Contact Me</h2>
+<h2 id="contact" class="sectionHead">联系我</h2>
 
 <!--CONTACT FORM-->
 <div id="contactform"  class="contact">
@@ -191,20 +196,20 @@
 	
 		<div id="contactInfo">
     	<p>
-    		<label class="smallInput" for="name">Name <span class="required">*</span></label><br />
+    		<label class="smallInput" for="name">姓名 <span class="required">*</span></label><br />
     		<input type="text" name="name" id="name" value="" class="input round3" /> 
     	</p>
     	<p>
-    		<label class="smallInput" for="email">Email <span class="required">*</span></label><br />
+    		<label class="smallInput" for="email">邮箱 <span class="required">*</span></label><br />
     		<input type="text" name="email" id="email" value="" class="input round3" /> 
     	</p>
 		<p>
-    		<label class="smallInput" for="phone">Phone</label><br />
+    		<label class="smallInput" for="phone">电话</label><br />
     		<input type="text" name="phone" id="phone" value="" class="input round3" /> 
     	</p>
     	</div>
     	<p id="emailMessage">
-    		<label class="smallInput" for="message">Message <span class="required">*</span></label><br />
+    		<label class="smallInput" for="message">内容 <span class="required">*</span></label><br />
     		<textarea name="message" id="message" class="input round3"></textarea>
     	</p>
     	
@@ -214,7 +219,7 @@
     	<input name="repemail" id="repemail" type="hidden" value="you@yourdomain.com" />
     	<!-- ENTER YOUR URL BELOW: MUST CONTAIN #contact AT THE END OF THE URL-->
     	<input name="pagelink" id="pagelink" type="hidden" value="http://www.themolitor.com/applicant#contact" />
-    	<input name="send" id="submit_btn" type="submit" class="round3 clearRight" value="Send Message" />
+    	<input name="send" id="submit_btn" type="submit" class="round3 clearRight" value="发送" />
     	
     	<p id="required"><span class="required">*</span> <em>= Required field</em></p>
     </form>
@@ -226,7 +231,7 @@
 </div><!--end wrapper-->
 
 <!--COPYRIGHT-->
-<div id="copyright">©2017 Shanshu | 沪ICP备17046132号-1</div>
+<div id="copyright">©2017 Shanshu | 沪ICP备17046132号-2</div>
 
 <!--SCRIPTS-->
 <script src="js/jquery.js"></script>
