--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link rel="shortcut icon" href=" ./images/favicon.ico" type="image/x-icon"/>
 	<title>个人主页</title>
-<meta name="viewport" content="initial-scale=1.0,width=device-width" />
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <link rel="stylesheet" href="css/style.css" type="text/css" media="screen" />
 <link rel="stylesheet" href="css/prettyPhoto.css" type="text/css" media="screen" />
 <link rel="stylesheet" href="css/print.css" type="text/css" media="print" />
@@ -86,11 +86,12 @@
 			<h4>上海圆率信息科技公司，上海</h4>
 			<h5>2017/7 - 至今</h5>
 		</div>
-		<p>1.与设计师、产品工程师紧密工作在一起,实现产品前端ui和交互方面的开发需求，确保不同平台、设备上具有优秀的用户体验；
-			2.配合后端工程师增加页面的JS交互效果以及CSS排版；
-			3.根据不同的PC和手机浏览器编写高效的脚本代码；
-			4、持续的优化前端体验和页面相应速度，并保证兼容性和执行效率；
-			5.与团队成员分享经验和新技术，帮助团队成长。
+		<p>
+			1、与设计师、产品工程师紧密工作在一起,实现产品前端ui和交互方面的开发需求，确保不同平台、设备上具有优秀的用户体验；<br/>
+			2、配合后端工程师增加页面的JS交互效果以及CSS排版；<br/>
+			3、根据不同的PC和手机浏览器编写高效的脚本代码；<br/>
+			4、持续的优化前端体验和页面相应速度，并保证兼容性和执行效率；<br/>
+			5、与团队成员分享经验和新技术，帮助团队成长。
 		</p>
 	</li>
 	<li>
@@ -99,10 +100,10 @@
 			<h4>长沙市红耀通科技信息有限公司，长沙</h4>
 			<h5>2016/5 - 2017/6</h5>
 		</div>
-		<p>主要工作内容有以下：
-			1、根据UI设计图进行切图完成移动端及pc端页面；
-			2、对前端页面优化以及动态页面的设计，负责echarts图表绘制；完成页面交互；
-			4、与后端开发人员紧密配合，完成产品的整体开发。</p>
+		<p>主要工作内容有以下：<br/>
+			1、根据UI设计图进行切图完成移动端及pc端页面；<br/>
+			2、对前端页面优化以及动态页面的设计，负责echarts图表绘制；完成页面交互；<br/>
+			3、与后端开发人员紧密配合，完成产品的整体开发。</p>
 	</li>
 </ul><!--end jobs-->
 
@@ -152,7 +153,7 @@
 	<li class="bwWrapper"><img src="images/logos/tauve.png" alt="tauve" /><a href="https://tauve.com/" class="full-a"></a></li>
 	<li class="bwWrapper"><img src="images/logos/lanya.png" alt="lanya" /></li>
 	<li class="bwWrapper"><img src="images/logos/ladygood.png" alt="ladygood" /></li>
-	<!--<li class="bwWrapper"><img src="images/logos/designers_couch.png" alt="Designers Couch" /></li> -->
+	<!--<li class="bwWrapper"><img src="images/logos/designers_couch.png" alt="Designers Couch" /></li>-->
 	<!--<li class="bwWrapper"><img src="images/logos/dribbble.png" alt="Dribbble" /></li> -->
 	<!--<li class="bwWrapper"><img src="images/logos/design_shack.png" alt="Design Shack" /></li> -->
 	<!--<li class="bwWrapper"><img src="images/logos/envato_notes.png" alt="Envato Notes" /></li> -->
