--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 	<li class="bwWrapper"><img src="images/logos/tauve.png" alt="tauve" /><a href="https://tauve.com/" class="full-a"></a></li>
 	<li class="bwWrapper"><img src="images/logos/lanya.png" alt="lanya" /></li>
 	<li class="bwWrapper"><img src="images/logos/ladygood.png" alt="ladygood" /></li>
-	<li class="bwWrapper"><img src="images/logos/designers_couch.png" alt="Designers Couch" /></li>
+	<!-- <li class="bwWrapper"><img src="images/logos/designers_couch.png" alt="Designers Couch" /></li>
 	<li class="bwWrapper"><img src="images/logos/dribbble.png" alt="Dribbble" /></li>
 	<li class="bwWrapper"><img src="images/logos/design_shack.png" alt="Design Shack" /></li>
 	<li class="bwWrapper"><img src="images/logos/envato_notes.png" alt="Envato Notes" /></li>
@@ -168,7 +168,7 @@
 	<li class="bwWrapper"><img src="images/logos/unmatchedstyle.png" alt="unmatchedstyle" /></li>
 	<li class="bwWrapper"><img src="images/logos/webdepot.jpg" alt="Web Designer Depot" /></li>
 	<li class="bwWrapper"><img src="images/logos/webmag.jpg" alt="Web Designer mag" /></li>
-	<li class="bwWrapper"><img src="images/logos/wptv-logo.png" alt="WordPress TV" /></li>
+	<li class="bwWrapper"><img src="images/logos/wptv-logo.png" alt="WordPress TV" /></li> -->
 
 </ul><!--end seenOn-->
 <div>
