--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <!--BIO-->
 <div id="bio">
-	<h2>网站开发、游戏开发、运维</h2>
+	<h2>前端开发、游戏开发、运维</h2>
 	
 	<!--SOCIAL LINKS-->
 	<div id="socialIcons">
@@ -123,7 +123,7 @@
 			<h4>信息与计算科学，本科</h4>
 			<h5>2012/9 - 2016/6</h5>
 		</div>
-		<p>主修：信息论与数理统计、数据结构、c语言程序设计、面向对象程序设计、数据库系统原理、概率论与数理统计、模糊数学、高等代数、数学分析等
+		<p>主修：概率论与数理统计、数据结构、c语言程序设计、面向对象程序设计、数据库系统原理、概率论与数理统计、模糊数学、高等代数、数学分析等
 			毕业设计：大学生数学建模能力评价研究</p>
 	</li>
 	<!--<li>-->
@@ -194,7 +194,7 @@
 
 
 <!--CONTACT TITLE-->
-<h2 id="contact" class="sectionHead">联系我</h2>
+<h2 id="contact" class="sectionHead">留言</h2>
 
 <!--CONTACT FORM-->
 <div id="contactform"  class="contact">
