更新联系方式

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <!--BIO-->
 <div id="bio">
-	<h2>前端开发、游戏开发、运维</h2>
+	<h2>前端开发、node.js开发</h2>
 	
 	<!--SOCIAL LINKS-->
 	<div id="socialIcons">
@@ -75,7 +75,7 @@
 	<li id="skill7" class="s90"><span>User Interface Design</span></li>
 	<li id="skill8" class="s80"><span>mariadb</span></li>
 	<li id="skill9" class="s80"><span>linux shell</span></li>
-	<li id="skill10" class="s80"><span>node.js + express</span></li>
+	<li id="skill10" class="s90"><span>node.js + express</span></li>
 </ul><!--end skills-->
 
 <div class="clear"></div>
@@ -194,7 +194,7 @@
 
 
 <!--CONTACT TITLE-->
-<h2 id="contact" class="sectionHead">留言</h2>
+<h2 id="contact" class="sectionHead">联系方式</h2>
 
 <!--CONTACT FORM-->
 <div id="contactform"  class="contact">
@@ -202,21 +202,21 @@
 	
 		<div id="contactInfo">
     	<p>
-    		<label class="smallInput" for="name">姓名 <span class="required">*</span></label><br />
-    		<input type="text" name="name" id="name" value="" class="input round3" /> 
+    		<label class="smallInput" for="name">姓名</label><br />
+    		<input type="text" name="name" id="name" value="陈山树" class="input round3" readonly />
     	</p>
     	<p>
-    		<label class="smallInput" for="email">邮箱 <span class="required">*</span></label><br />
-    		<input type="text" name="email" id="email" value="" class="input round3" /> 
+    		<label class="smallInput" for="email">邮箱</label><br />
+    		<input type="text" name="email" id="email" value="shanshu1993@outlook.com" class="input round3" readonly/>
     	</p>
 		<p>
     		<label class="smallInput" for="phone">电话</label><br />
-    		<input type="text" name="phone" id="phone" value="" class="input round3" /> 
+    		<input type="text" name="phone" id="phone" value="17621141099" class="input round3" readonly/>
     	</p>
     	</div>
     	<p id="emailMessage">
     		<label class="smallInput" for="message">内容 <span class="required">*</span></label><br />
-    		<textarea name="message" id="message" class="input round3"></textarea>
+    		<textarea name="message" id="message" class="input round3" placeholder="给我发封邮件..."></textarea>
     	</p>
     	
     	<!-- EMAIL SUBJECT -->
