--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 	<p>
 		1、本人熟练掌握HTML5/CSS3/Javascript等前端技术。<br/>
 		2、使用angularjs和bootstrap完成多个项目，熟悉nodejs，能熟练编写sql，熟悉vue框架。<br/>
-		3、熟悉svn工具，有sui mobile和senchatouch框架开发移动端经验，有响应式开发经验，能熟练使用echarts。<br/>
-		4、熟悉主流浏览器的兼容性测试，能快速解决浏览器的兼容性问题，对数据结构和java有一定了解。<br/>
+		3、熟悉svn工具，有sui mobile和extjs框架开发移动端经验，有响应式开发经验，能熟练使用echarts。<br/>
+		4、熟悉主流浏览器的兼容性测试，能快速解决浏览器的兼容性问题，对数据结构和C#有一定了解。<br/>
 		5、逻辑能力强，具备良好的中英文读写能力，代码编写规范，对新知识充满学习热情。<br/>
 		6、熟练git操作，能独立完成基本的Linux操作。
 
@@ -66,16 +66,17 @@
 	<!--////////////////////////////////////////////////////////////////////////////////////-->
 	<!--Notice the class names indicate the % of your skills. i.e. s70 = 70%, s40 = 40% etc. -->
 	<!--////////////////////////////////////////////////////////////////////////////////////-->
-	<li id="skill1" class="s90"><span>WordPress Development</span></li>
-	<!--<li id="skill2" class="s70"><span>PHP</span></li>-->
-	<li id="skill3" class="s100"><span>HTML + CSS</span></li>
+
+	<li id="skill3" class="s100"><span>HTML + CSS + bootstrap</span></li>
 	<li id="skill4" class="s100"><span>jQuery</span></li>
-	<li id="skill5" class="s100"><span>Photoshop</span></li>
-	<li id="skill6" class="s90"><span>bootstrap + angularjs</span></li>
+	<li id="skill6" class="s80"><span>Angular.js1 / vue.js2</span></li>
+	<li id="skill10" class="s90"><span>Node.js + express</span></li>
+	<li id="skill2" class="s70"><span>Nginx / apache</span></li>
+	<li id="skill8" class="s80"><span>Mariadb / mysql</span></li>
+	<li id="skill9" class="s80"><span>Linux shell</span></li>
+	<li id="skill1" class="s90"><span>WordPress Development</span></li>
 	<li id="skill7" class="s90"><span>User Interface Design</span></li>
-	<li id="skill8" class="s80"><span>mariadb</span></li>
-	<li id="skill9" class="s80"><span>linux shell</span></li>
-	<li id="skill10" class="s90"><span>node.js + express</span></li>
+	<li id="skill5" class="s80"><span>Photoshop</span></li>
 </ul><!--end skills-->
 
 <div class="clear"></div>
@@ -198,7 +199,7 @@
 
 <!--CONTACT FORM-->
 <div id="contactform"  class="contact">
-	<form action="send.php" method="post" >
+	<form action="http://v.juhe.cn/sms/send" method="get" >
 	
 		<div id="contactInfo">
     	<p>
@@ -220,11 +221,11 @@
     	</p>
     	
     	<!-- EMAIL SUBJECT -->
-    	<input name="subject" id="subject" type="hidden" value="Resume Email Message" />
+    	<input name="subject" id="subject" type="hidden" value="from mypage" />
     	<!-- YOUR EMAIL ADDRESS -->
-    	<input name="repemail" id="repemail" type="hidden" value="you@yourdomain.com" />
+    	<input name="repemail" id="repemail" type="hidden" value="59071780@qq.com" />
     	<!-- ENTER YOUR URL BELOW: MUST CONTAIN #contact AT THE END OF THE URL-->
-    	<input name="pagelink" id="pagelink" type="hidden" value="http://www.themolitor.com/applicant#contact" />
+    	<!--<input name="pagelink" id="pagelink" type="hidden" value="http://www.themolitor.com/applicant#contact" />-->
     	<input name="send" id="submit_btn" type="submit" class="round3 clearRight" value="发送" />
     	
     	<p id="required"><span class="required">*</span> <em>= Required field</em></p>
@@ -241,7 +242,6 @@
 
 <!--SCRIPTS-->
 <script type="text/javascript" src="./lib/lizi/js/jquery-1.11.0.min.js"></script>
-<script src="js/jquery.js"></script>
 <script src="js/prettyPhoto.js"></script>
 <script src="js/backPosition.js"></script>
 <script src="js/custom.js"></script>
